Changes in Act

[main changes only -- see http://svnweb.mongueurs.net/Act/log/branches/stable for full list]

2008/08/09 r1992 personal schedule
                 wiki diff between pages
                 enhance schedule ICal export

2008/07/15 r1943 use Email::* modules (and sendmail) to send email

2008/05/07 r1917 new purchasing features:
                 multiple products (e.g. registration, classes, accomodation)
                 each purchase can contain one or more products
                 each product can have one or more prices
                 users can issue multiple orders: they can purchase products any time payment is open
                 prices can be protected by promo codes
                 allow gratis prices

2008/04/26 r1874 OpenID server

2008/04/11 r1850 Croatian translation

2008/03/24 r1844 permalinks for news items

2008/03/19 r1819 Japanese translation

2008/02/17 r1804 better search engine compatibility: don't redirect bots on language change

2008/02/13 r1797 treasurer feature: unregister user

2008/02/09 r1790 new config vars registration_open, registration_max_attendees
           r1788 Belarusian translation

2008/02/05 r1778 better looking skeleton site
           r1772 Current Talks/Events API
           r1766 Flickr photo galleries API

2007/11/27 r1737 Hebrew translation
           r1736 Russian translation

2007/09/15 r1693 multilingual room names
           r1690 support for free conferences (no payment)

2007/09/01 r1649 PayPal payment plugin
           r1648 preview news items before saving them
           r1646 tags: users can tag talks and wiki pages

2007/08/17 r1612 talk languages: define a set of accepted languages for a conference
                 and let the speakers set the talk language
           r1609 news items datetime always editable, in local time,
                 can be in the future
           r1603 treasurer can edit payments that he's created
                 and with no associated invoice
